// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndicatorCircle /> should apply the given color 1`] = `
<IndicatorCircle
  color="#fff"
  size={32}
  strokeWidth={4}
>
  <svg
    className="css-17zev8s"
    height={32}
    viewBox="25 25 50 50"
    width={32}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      className="css-q48ji6"
      cx="50"
      cy="50"
      r="20"
    />
  </svg>
</IndicatorCircle>
`;

exports[`<IndicatorCircle /> should apply the given size 1`] = `
<svg
  className="css-17zev8s"
  height={32}
  viewBox="25 25 50 50"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    className="css-o43ryf"
    cx="50"
    cy="50"
    r="20"
  />
</svg>
`;
